app/assets/_failures.sass
.failures
  background: #fff
  padding: 1em

  table
    width: 100%
    max-width: 100%

    tr:hover
      td
        background-color: #eee

    th
      border-bottom: 1px solid #eee
      font-size: 75%
      font-weight: normal
      text-align: center
      text-transform: uppercase

    td
      max-width: 0
      vertical-align: top

      &.date
        width: 80px

      &.count
        width: 50px
        text-align: right

      &.application
        width: 120px
        text-align: right

        overflow: hidden
        text-overflow: ellipsis
        white-space: nowrap

      &.details
        overflow: hidden
        text-overflow: ellipsis
        white-space: nowrap

        span
          display: block

          &:last-child
            font-family: monospace
            font-size: 90%
            color: #888

      a
        display: block
        padding: 0 0.5em

.failure
  header
    padding: 0.5rem 1rem

    background-color: #f5f5f5
    border-bottom: 1px solid #ddd

    h2
      margin: 0
      display: inline-block

      font-size: 1.4rem

  .stacktrace
    font-size: 90%
    width: 100%

    tr
      td.file, td.call
        width: 50%

      td.file
        text-align: right

        span:first-child
          color: #666
          font-size: 90%

        &::after
          color: #666
          content: ': '

      td.line
        text-align: right
        color: #1F5B34

        &::after
          color: #666
          content: ': in '

  .panel
    background-color: #fff
    padding: 1rem

  .info
    display: flex
    flex-wrap: wrap
    margin: 1rem 0
    width: 100%

    > div
      display: flex
      width: 25%

      border: 1px solid #ccc
      border-top-width: 0
      border-left-width: 0

      &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4)
        border-top-width: 1px

      &:nth-child(5n), &:first-child
        border-left-width: 1px

      > h4, > a
        line-height: 1.4rem
        font-size: 0.7rem

      > h4
        text-align: right
        margin: 0
        min-width: 80px
        padding: 2px 0.4rem

        color: #555
        background: #f6f6f6

      > a
        background: #fff
        width: 100%
        margin: 0
        padding: 2px 0.4rem
        text-overflow: ellipsis
        overflow: hidden
        white-space: nowrap

        &.empty
          color: #999

      @media (max-width: 1024px)
        flex-direction: column

        > h4
          text-align: left

